fix: Avoid control panel becoming too large horizontally

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,8 @@ body {
     border: 3px ridge brown;
     box-shadow: 5px 5px 2px rgba(165, 42, 42, 0.5);
     margin: 0 auto;
-    max-width: 90%;
+    width: 90%;
+    max-width: 500px;
 }
 
 @media (min-width: 980px) {
